css/style.production.css
/* ... */
.button {
	display: inline-block;
	background-color: var(--blue);
	color: var(--base-100);
	padding: 10px 30px;
	border-radius: 10px;
	-webkit-transition: ease 0.2s all;
	-o-transition: ease 0.2s all;
	transition: ease 0.2s all;
	&:hover {
		text-decoration: none;
		background-color: var(--base-800);
	}
	&.white {
		background-color: white;
		color: var(--base-800);
		&:hover {
			background-color: var(--base-100);
			color: var(--blue);
		}
	}
	&.black {
		background-color: black;
		color: white;
		&:hover {
			background-color: var(--base-400);
			color: var(--base-100);
		}
	}
}

h1 {
	font-size: 64px;
	line-height: 1;
	margin-bottom: 10px;
	small {
		display: block;
		font-weight: 100;
	}

	@media (max-width: 1024px) {
		font-size: 48px;
	}
}
.hero {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	margin-bottom: 30px;

	/* to stack the hero section elements */
	@media (max-width: 1024px) {
		-webkit-box-orient: vertical;
		-webkit-box-direction: normal;
		-ms-flex-direction: column;
		flex-direction: column;
	}

	.hero-blue {
		-webkit-box-flex: 1;
		-ms-flex: 1;
		flex: 1;
		background-color: var(--blue-100);
		border-radius: 30px;
		padding: 30px;
		display: -webkit-box;
		display: -ms-flexbox;
		display: flex;
		-webkit-box-orient: vertical;
		-webkit-box-direction: normal;
		-ms-flex-direction: column;
		flex-direction: column;
		-webkit-box-pack: center;
		-ms-flex-pack: center;
		justify-content: center;
		p {
			small {
				display: block;
				margin-bottom: 5px;
				font-size: 42px;
				font-weight: 100;
				line-height: 1;
			}
			span {
				display: block;
				margin-top: 10px;
			}
		}

		.call-to-action {
			margin-top: 20px;
			margin-bottom: 10px;
			a {
				margin-right: 10px;
				margin-bottom: 10px;
			}
		}
		.social-links {
			a {
				text-decoration: none;
			}
			img {
				width: 64px;
				height: 64px;
			}
		}
	}
	.hero-yellow {
		-webkit-box-flex: 1;
		-ms-flex: 1;
		flex: 1;
		background-color: var(--yellow);
		border-radius: 30px;
		padding: 0 30px;
		display: -webkit-box;
		display: -ms-flexbox;
		display: flex;
		-webkit-box-pack: center;
		-ms-flex-pack: center;
		justify-content: center;
		-webkit-box-align: stretch;
		-ms-flex-align: stretch;
		align-items: stretch;
		img {
			max-width: 420px;
		}
	}
}

h2 {
	font-size: 64px;
	line-height: 1;
	color: var(--base-800);
	padding: 30px;
	margin-bottom: 10px;
	text-align: center;
	small {
		display: block;
		font-size: 0.5em;
		font-weight: 100;
		color: var(--base);
	}
	@media (max-width: 1024px) {
		font-size: 48px;
	}
}
h3 {
	font-size: 32px;
	font-weight: 600;
	line-height: 1;
	color: var(--base-800);
	margin-bottom: 20px;
}
.discription-box {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: start;
	-ms-flex-pack: start;
	justify-content: flex-start;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	gap: 3px;
	small {
		font-size: 1.2rem;
		font-weight: 900;
		margin: 10px 10px 20px 0px;
	}
}
.skills {
	.holder-blue {
		background-color: var(--blue-100);
		border-radius: 30px;
		padding: 30px;
		margin-bottom: 1em;
		display: -webkit-box;
		display: -ms-flexbox;
		display: flex;
		gap: 20px;
		.skills-header {
			height: 7em;
		}

		@media (max-width: 425px) {
			.skills-header {
				height: auto;
			}
		}
		.left-column {
			-webkit-box-flex: 1;
			-ms-flex: 1;
			flex: 1;
			display: -webkit-box;
			display: -ms-flexbox;
			display: flex;
			-webkit-box-orient: vertical;
			-webkit-box-direction: normal;
			-ms-flex-direction: column;
			flex-direction: column;
			-webkit-box-pack: justify;
			-ms-flex-pack: justify;
			justify-content: space-between;
			-webkit-box-align: start;
			-ms-flex-align: start;
			align-items: flex-start;
			p {
				margin: 10px 10px 20px 0px;
			}
			ul {
				list-style-type: none;
				gap: 10px;
				margin-right: 10px;
				margin-bottom: 20px;
				li {
					display: inline-block;
					background-color: var(--blue-400);
					padding: 3px 8px;
					border-radius: 8px;
					margin-bottom: 8px;
					font-size: 0.75em;
				}
			}
		}
		.right-column {
			-webkit-box-flex: 1;
			-ms-flex: 1;
			flex: 1;
			display: -webkit-box;
			display: -ms-flexbox;
			display: flex;
			-webkit-box-orient: vertical;
			-webkit-box-direction: normal;
			-ms-flex-direction: column;
			flex-direction: column;
			-webkit-box-pack: justify;
			-ms-flex-pack: justify;
			justify-content: space-between;
			-ms-flex-line-pack: center;
			align-content: center;
			.career {
				padding: 10px 0;
				.contents {
					padding-left: 5px;
					ul {
						li {
							list-style: none;
							padding: 5px 0;
							span {
								color: var(--base-800);
								font-weight: 600;
								display: block;
								padding: 5px 0;
							}
						}
						.experience-detail {
							font-size: 0.9rem;
							padding-bottom: 10px;
						}
					}
				}
			}
			@media (max-width: 1024px) {
				background-color: var(--yellow);
				margin: 30px -30px -30px;
				border-radius: 0 0 30px 30px;
				padding: 30px;
			}
		}
		@media (max-width: 1024px) {
			-webkit-box-orient: vertical;
			-webkit-box-direction: normal;
			-ms-flex-direction: column;
			flex-direction: column;
		}
	}
}
/* ... */

